--- a/storage/pages/ru/404.md
+++ b/storage/pages/ru/404.md
@@ -1,8 +1,7 @@
 ---
-title: Error 404
-robots: noindex,nofollow
+title: Страница не найдена — 404
+robots: noindex, nofollow
 ---
 
-##Error 404
-
-We're sorry but the page you are looking for doesn't appear to exist!
+## Страница не найдена
+Возможно, она была удалена или перемещена.
